[package]
name = "hex-field"
version = "0.1.0"
authors = ["KirFed <f3kilo@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mapped_tree = { git = "https://github.com/F3kilo/mapped_tree.git" }
rand = "0.7.2"
glam = "0.8.5"
